# passive-sentry

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md  owasp_coverage.md  technical_decisions.md
scripts/: batch_processing.py
src/passivesentry/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: test_batch_cli.py  test_core_audit.py  test_owasp_top10_module_integration.py
tests/unit/: test_batch_processing.py  test_english_language_guard.py  test_owasp_top10_2025_modules.py  test_pdf_reporter_templates.py  test_reporting_fallback_and_cli_summary.py  test_reporting_findings_alignment.py  test_risk_scoring_consistency.py  test_security_misconfiguration.py  test_streamlit_dashboard.py  test_utils_timeout.py
