[project]
name = "passivesentry"
version = "1.0.0"
description = "Passive security auditing CLI tool (OSINT-only) mapped to OWASP Top 10 2025"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Miguel Lozano | Developmi", email = "miguel@developmi.com"}
]
maintainers = [
    {name = "Miguel Lozano | Developmi", email = "miguel@developmi.com"}
]
dependencies = [
    "click>=8.3.2",
    "requests>=2.33.1",
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.6",
    "weasyprint>=68.1",
    "dnspython>=2.8.0",
    "python-dateutil>=2.9.0.post0",
    "colorama>=0.4.6",
    "streamlit>=1.56.0",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
]

[project.urls]
Homepage = "https://developmi.com"
Repository = "https://github.com/Miguel-DevOps/passivesentry"
Issues = "https://github.com/Miguel-DevOps/passivesentry/issues"

[project.scripts]
passivesentry = "passivesentry.cli:main"

[tool.hatch.build]
packages = ["src/passivesentry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: unit tests",
    "e2e: end-to-end tests",
]
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "mypy>=1.20.0",
    "types-requests>=2.32.4.20260328",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
